=== BETA 1 (v 0.9.1.0), 2011-04-11, NH 3.2.0 Alpa 1 ===

** Bug
[NHE-8] - Rollback of audit data if exception when flushmode.never is used
[NHE-9] - Query component properties using "."

** Improvement
[NHE-10] - Support for IAuditReader.FindRevisions()

** New Feature
[NHE-1] - Port audit strategy


*** Breaking changes ***
* Changed signature: IAuditReader.FindRevision(Type, long) -> IAuditReader.FindRevision(long)
* Changed signature: IAuditReader.GetCurrentRevision(Type, bool) -> IAuditReader.GetCurrentRevision(bool)



=== ALPHA 2 (v 0.8.2.0), 2011-03-14, NH 3.1.0 ===

[NHE-5] - Documentation

*** Breaking changes ***
* Renamed IFluentAudit<T>.ExcludeRelation to ExcludeRelationData
* AuditMappedByAttribute no longer public for users. Handled automatically internally.
* Renamed envers.store_data_at_delete to nhibernate.envers.store_data_at_delete
* Renamed envers.do_not_audit_optimistic_locking_field to nhibernate.envers.do_not_audit_optimistic_locking_field



=== ALPHA 1 (v 0.8.1.0), 2011-03-05, NH 3.1.0 ===

[NHE-2] - Biref onetoone on pk
[NHE-3] - Support access="readonly"
[NHE-4] - Structs as components - querying
[NHE-6] - Bidirectional list support
[NHE-7] - Exception in AuditSync.BeforeCompletion is swallowed by (NH) AdoTransaction