@@ -10,7 +10,7 @@ namespace NHibernate.Envers.Tests.Integration.Naming
 		[Audited]
 		public virtual string Data { get; set; }
 		[Audited]
-		[AuditJoinTable(Name = "VERSIONS_JOIN_TABLE_TEST", InverseJoinColumns = new[]{"STR_ID"})]
+		[AuditJoinTable(TableName = "VERSIONS_JOIN_TABLE_TEST", InverseJoinColumns = new[]{"STR_ID"})]
 		public virtual ISet<StrTestEntity> Collection { get; set; }
 
 		public override bool Equals(object obj)
